--- a/Resturants/Cell/TagUserCell/TagUserTCell.xib
+++ b/Resturants/Cell/TagUserCell/TagUserTCell.xib
@@ -69,21 +69,24 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="DWi-Fb-HLE">
-                                <rect key="frame" x="202.66666666666666" y="17.666666666666671" width="111.33333333333334" height="31"/>
+                                <rect key="frame" x="205.66666666666666" y="20" width="108.33333333333334" height="26"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="avu-81-mcS">
-                                        <rect key="frame" x="0.0" y="0.99999999999999822" width="24" height="29.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="0.99999999999999822" width="24" height="24.666666666666664"/>
                                         <color key="tintColor" name="ColorWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="24" id="I2i-eg-iAq"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Xd-sX-Qbj">
-                                        <rect key="frame" x="26" y="0.0" width="67" height="31"/>
+                                        <rect key="frame" x="26" y="0.0" width="64" height="26"/>
                                         <color key="backgroundColor" name="ColorYellow"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="26" id="TDE-Fs-eey"/>
+                                        </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Follow">
-                                            <fontDescription key="titleFontDescription" name="Inter-Regular_Medium" family="Inter" pointSize="14"/>
+                                            <fontDescription key="titleFontDescription" name=".SFUI-Semibold" family=".AppleSystemUIFont" pointSize="14"/>
                                             <color key="baseForegroundColor" name="ColorBlack"/>
                                         </buttonConfiguration>
                                         <userDefinedRuntimeAttributes>
@@ -93,7 +96,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u46-3F-u2R">
-                                        <rect key="frame" x="95.000000000000028" y="0.0" width="16.333333333333329" height="31"/>
+                                        <rect key="frame" x="92.000000000000028" y="0.0" width="16.333333333333329" height="26"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" image="More"/>
                                     </button>
