--- a/Resturants/Cell/MenuTCell/MenuTCell.xib
+++ b/Resturants/Cell/MenuTCell/MenuTCell.xib
@@ -47,7 +47,7 @@
                                 <color key="textColor" name="ColorLightGreen"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add" translatesAutoresizingMaskIntoConstraints="NO" id="hGW-Ps-X29">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FrameTop" translatesAutoresizingMaskIntoConstraints="NO" id="hGW-Ps-X29">
                                 <rect key="frame" x="187" y="6" width="130" height="101"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <constraints>
@@ -91,7 +91,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="add" width="76.333335876464844" height="36"/>
+        <image name="FrameTop" width="375" height="164"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
